--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,10 @@ spring.jpa.show-sql= true
 ######   data config end ######
 #spring.thymeleaf.prefix=classpath:/templates/
 #spring.thymeleaf.suffix=.html
+#日志配置
+logback.logdir=/tzwp/topcheer/log/
+logback.appname=topcheer
 #配置活动的配置文件
 spring.profiles.active=test
 spring.thymeleaf.cache=false 
+
